--- a/package.json
+++ b/package.json
@@ -39,13 +39,20 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@swc/core": "^1.12.7",
     "@tanstack/react-query": "^5.56.2",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/lru-cache": "^7.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "csrf": "^3.1.0",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
+    "jwt-decode": "^4.0.0",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -60,25 +67,29 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/csrf": "^1.3.2",
+    "@types/dompurify": "^3.0.5",
+    "@types/next": "^8.0.7",
+    "@types/node": "^22.15.34",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
+    "rollup": "^3.29.4",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^4.5.0"
   }
 }
